--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 img {
     width: 380px;
     border: 3px solid #121212;
+    
 }
 
 button {
@@ -14,12 +15,30 @@ button {
     font-weight: bold;
 }
 
-input {
-    width: 250px;
-    border: 3px solid #121212;
-    height: 37px;
+.main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-body {
+.signup {
+    display: flex;
+    flex-direction: column;
     
+
+}
+
+input {
+    width: 240px;
+    border: 3px solid #121212;
+    height: 37px;
+    margin-top: 10px;
+}
+
+.terms {
+    font-style: italic;
+}
+
+p {
+    font-style: italic;
 }
